
--------------------------------------------------------------------------------
general

-- Renamed 'Eaagles' namespace to 'oe' to align namespace to project name
-- Renamed all namespaces to lowercase names - this complies with typical C++
-- convention and avoids confusion with classnames

-- Removed legacy support for 'formnames' in base Object
-- All form functions have now been removed -- should use 'Factory' functions

--------------------------------------------------------------------------------
basic


--------------------------------------------------------------------------------
basicGL


--------------------------------------------------------------------------------
dafif


--------------------------------------------------------------------------------
dis


--------------------------------------------------------------------------------
dynamics

   JSBSimModel class
      -- Added new slot parameter ('debugLevel') to set the debug level for JSBSim
         model instance. This controls the verbosity (i.e., output printed to console)
         of the model itself.  Slot parameter accepts an integer value.

--------------------------------------------------------------------------------
instruments


--------------------------------------------------------------------------------
ioDevice


--------------------------------------------------------------------------------
linearSys



--------------------------------------------------------------------------------
maps


--------------------------------------------------------------------------------
otw


--------------------------------------------------------------------------------
recorder


--------------------------------------------------------------------------------
simulation


--------------------------------------------------------------------------------
terrain
 

--------------------------------------------------------------------------------
